Revision history for Perl extension Monitoring::Availability.

0.05  in progress
    - fixed reports when logfiles are totally out of report range
    - changed the way of settings options
    - added new option services_inherit_hostdowntimes

0.04  Mon Jan 18 08:06:59 CET 2010
    - added message when passing wrong services

0.03  Sat Jan 16 20:46:54 CET 2010
    - added resulting datastructure
    - added read string/array/file/dir methods
    - first tests
    - implemented assumestatesduringnotrunning option
    - implemented service availability calculation
    - implemented hostdowntimes
    - implemented servicedowntimes
    - implemented hosts

0.01  Fri Jan 15 16:40:00 CET 2010
    - initial version