@@ -17,11 +17,11 @@ my $expected = [
     { 'time' => '1260711581', 'type' => 'Finished daemonizing... (New PID=12484)' },
     { 'time' => '1260715790', 'type' => 'Error' },
     { 'time' => '1260715801', 'type' => 'Successfully shutdown... (PID=12502)' },
-    { 'time' => '1260716221', 'type' => 'Lockfile \'/opt/projects/nagios/n1/var/nagios3.pid\' looks like its already held by another instance of Nagios (PID 13226).  Bailing out...', 'proc_start' => 0, 'proc_err' => 1 },
+    { 'time' => '1260716221', 'type' => 'Lockfile \'/opt/projects/nagios/n1/var/nagios3.pid\' looks like its already held by another instance of Nagios (PID 13226).  Bailing out...', 'proc_start' => -1 },
     { 'time' => '1260722815', 'type' => 'Warning' },
     { 'time' => '1260725492', 'type' => 'Warning' },
     { 'time' => '1260725492', 'type' => 'Warning' },
-    { 'time' => '1260971246', 'type' => 'PROGRAM_RESTART event encountered, restarting...', 'proc_start' => 1 },
+    { 'time' => '1260971246', 'type' => 'PROGRAM_RESTART event encountered, restarting...', 'proc_start' => 2 },
     { 'time' => '1261050819', 'type' => 'PASSIVE HOST CHECK' },
     { 'time' => '1261685289', 'type' => 'SERVICE NOTIFICATION' },
     { 'time' => '1261686379', 'type' => 'SERVICE FLAPPING ALERT' },
