@@ -3,7 +3,7 @@
 #########################
 
 use strict;
-use Test::More tests => 3;
+use Test::More tests => 18;
 use Data::Dumper;
 
 use_ok('Monitoring::Availability');
@@ -33,6 +33,25 @@ my $expected = {
         }
     }
 };
+
+my $expected_condensed_log = [
+    { 'start' => '2010-01-21 23:12:10', end => '2010-01-21 23:13:05', 'duration' => '0d 0h 0m 55s',  'type' => 'SERVICE DOWNTIME START', plugin_output => 'Start of scheduled downtime', 'class' => 'INDETERMINATE' },
+    { 'start' => '2010-01-21 23:13:05', end => '2010-01-21 23:13:37', 'duration' => '0d 0h 0m 32s',  'type' => 'SERVICE DOWNTIME END', plugin_output => 'End of scheduled downtime', 'class' => 'INDETERMINATE' },
+    { 'start' => '2010-01-21 23:14:00', end => '2010-01-21 23:14:20', 'duration' => '0d 0h 0m 20s',  'type' => 'SERVICE UNKNOWN (HARD)', plugin_output => 'unknown', 'class' => 'UNKNOWN' },
+    { 'start' => '2010-01-21 23:14:20', end => '2010-01-21 23:14:34', 'duration' => '0d 0h 0m 14s',  'type' => 'SERVICE CRITICAL (HARD)', plugin_output => 'critical', 'class' => 'CRITICAL' },
+    { 'start' => '2010-01-21 23:14:34', end => '2010-01-21 23:25:07', 'duration' => '0d 0h 10m 33s+','type' => 'HOST DOWNTIME START', plugin_output => 'Start of scheduled downtime', 'class' => 'INDETERMINATE' },
+];
+
+my $expected_full_log = [
+    { 'start' => '2010-01-21 23:05:15', end => '2010-01-21 23:12:10', 'duration' => '0d 0h 6m 55s',  'type' => 'PROGRAM (RE)START', plugin_output => 'Program start', 'class' => 'INDETERMINATE' },
+    { 'start' => '2010-01-21 23:12:10', end => '2010-01-21 23:13:05', 'duration' => '0d 0h 0m 55s',  'type' => 'SERVICE DOWNTIME START', plugin_output => 'Start of scheduled downtime', 'class' => 'INDETERMINATE' },
+    { 'start' => '2010-01-21 23:13:05', end => '2010-01-21 23:13:37', 'duration' => '0d 0h 0m 32s',  'type' => 'SERVICE DOWNTIME END', plugin_output => 'End of scheduled downtime', 'class' => 'INDETERMINATE' },
+    { 'start' => '2010-01-21 23:13:37', end => '2010-01-21 23:13:38', 'duration' => '0d 0h 0m 1s',   'type' => 'PROGRAM (RE)START', plugin_output => 'Program restart', 'class' => 'INDETERMINATE' },
+    { 'start' => '2010-01-21 23:13:38', end => '2010-01-21 23:14:00', 'duration' => '0d 0h 0m 22s',  'type' => 'PROGRAM (RE)START', plugin_output => 'Program start', 'class' => 'INDETERMINATE' },
+    { 'start' => '2010-01-21 23:14:00', end => '2010-01-21 23:14:20', 'duration' => '0d 0h 0m 20s',  'type' => 'SERVICE UNKNOWN (HARD)', plugin_output => 'unknown', 'class' => 'UNKNOWN' },
+    { 'start' => '2010-01-21 23:14:20', end => '2010-01-21 23:14:34', 'duration' => '0d 0h 0m 14s',  'type' => 'SERVICE CRITICAL (HARD)', plugin_output => 'critical', 'class' => 'CRITICAL' },
+    { 'start' => '2010-01-21 23:14:34', end => '2010-01-21 23:25:07', 'duration' => '0d 0h 10m 33s+','type' => 'HOST DOWNTIME START', plugin_output => 'Start of scheduled downtime', 'class' => 'INDETERMINATE' },
+];
 
 #########################
 # create a logger object if we have log4perl installed
@@ -72,9 +91,29 @@ my $result = $ma->calculate(
     'end'                           => 1263498850,
 );
 TODO: {
-    local $TODO = "not yet implemented";
+    local $TODO = 'not yet implemented';
     is_deeply($result, $expected, 'host with downtime') or diag("got:\n".Dumper($result)."\nbut expected:\n".Dumper($expected));
+
+
+    my $condensed_logs = $ma->get_condensed_logs();
+    check_one_by_one($expected_condensed_log, $condensed_logs, 'condensed logs');
+
+    my $full_logs = $ma->get_full_logs();
+    check_one_by_one($expected_full_log, $full_logs, 'full logs');
+};
+
+#########################
+sub check_one_by_one {
+    my $exp  = shift;
+    my $got  = shift;
+    my $name = shift;
+
+    for(my $x = 0; $x <= scalar @{$exp}; $x++) {
+        is_deeply($got->[$x], $exp->[$x], $name.' '.$x) or diag("got:\n".Dumper($got->[0])."\nbut expected:\n".Dumper($exp->[0]));
+    }
+    return 1;
 }
+#########################
 
 __DATA__
 [1262962252] Nagios 3.2.0 starting... (PID=7873)
